bindings/c/whiteout_m2.h

typedef struct whiteout_M2Vertex whiteout_M2Vertex;
typedef struct whiteout_M2Bone whiteout_M2Bone;
typedef struct whiteout_M2Texture whiteout_M2Texture;
typedef struct whiteout_M2Material whiteout_M2Material;
typedef struct whiteout_M2TextureWeight whiteout_M2TextureWeight;
typedef struct whiteout_M2TextureTransform whiteout_M2TextureTransform;
typedef struct whiteout_M2ColorAnimation whiteout_M2ColorAnimation;
typedef struct whiteout_M2Light whiteout_M2Light;
typedef struct whiteout_M2CameraSpline whiteout_M2CameraSpline;
typedef struct whiteout_M2Camera whiteout_M2Camera;
typedef struct whiteout_M2Attachment whiteout_M2Attachment;
typedef struct whiteout_M2RibbonEmitter whiteout_M2RibbonEmitter;
whiteout_Vector3f* whiteout_m2_M2Vertex_get_position(whiteout_M2Vertex* self);
void whiteout_m2_M2Vertex_set_position(whiteout_M2Vertex* self, const whiteout_Vector3f* value);
whiteout_Vector3f* whiteout_m2_M2Vertex_get_normal(whiteout_M2Vertex* self);
void whiteout_m2_M2Vertex_set_normal(whiteout_M2Vertex* self, const whiteout_Vector3f* value);
/* ── M2Bone ─────────────────────────────────────────────── */

whiteout_M2Bone* whiteout_m2_M2Bone_new(void);
void whiteout_m2_M2Bone_delete(whiteout_M2Bone* self);
int32_t whiteout_m2_M2Bone_get_keyBoneId(const whiteout_M2Bone* self);
void whiteout_m2_M2Bone_set_keyBoneId(whiteout_M2Bone* self, int32_t value);
uint32_t whiteout_m2_M2Bone_get_flags(const whiteout_M2Bone* self);
void whiteout_m2_M2Bone_set_flags(whiteout_M2Bone* self, uint32_t value);
int16_t whiteout_m2_M2Bone_get_parentBoneId(const whiteout_M2Bone* self);
void whiteout_m2_M2Bone_set_parentBoneId(whiteout_M2Bone* self, int16_t value);
uint16_t whiteout_m2_M2Bone_get_submeshId(const whiteout_M2Bone* self);
void whiteout_m2_M2Bone_set_submeshId(whiteout_M2Bone* self, uint16_t value);
uint32_t whiteout_m2_M2Bone_get_boneNameCRC(const whiteout_M2Bone* self);
void whiteout_m2_M2Bone_set_boneNameCRC(whiteout_M2Bone* self, uint32_t value);
whiteout_Vector3f* whiteout_m2_M2Bone_get_pivot(whiteout_M2Bone* self);
void whiteout_m2_M2Bone_set_pivot(whiteout_M2Bone* self, const whiteout_Vector3f* value);
/* ── M2Texture ─────────────────────────────────────────────── */

whiteout_M2Texture* whiteout_m2_M2Texture_new(void);
void whiteout_m2_M2Texture_delete(whiteout_M2Texture* self);
uint32_t whiteout_m2_M2Texture_get_type(const whiteout_M2Texture* self);
void whiteout_m2_M2Texture_set_type(whiteout_M2Texture* self, uint32_t value);
uint32_t whiteout_m2_M2Texture_get_flags(const whiteout_M2Texture* self);
void whiteout_m2_M2Texture_set_flags(whiteout_M2Texture* self, uint32_t value);
whiteout_CString whiteout_m2_M2Texture_get_filename(const whiteout_M2Texture* self);
void whiteout_m2_M2Texture_set_filename(whiteout_M2Texture* self, const char* value);
/* ── M2Material ─────────────────────────────────────────────── */

whiteout_M2Material* whiteout_m2_M2Material_new(void);
void whiteout_m2_M2Material_delete(whiteout_M2Material* self);
uint16_t whiteout_m2_M2Material_get_flags(const whiteout_M2Material* self);
void whiteout_m2_M2Material_set_flags(whiteout_M2Material* self, uint16_t value);
uint16_t whiteout_m2_M2Material_get_blendingMode(const whiteout_M2Material* self);
void whiteout_m2_M2Material_set_blendingMode(whiteout_M2Material* self, uint16_t value);
/* ── M2TextureWeight ─────────────────────────────────────────────── */

whiteout_M2TextureWeight* whiteout_m2_M2TextureWeight_new(void);
void whiteout_m2_M2TextureWeight_delete(whiteout_M2TextureWeight* self);
/* ── M2TextureTransform ─────────────────────────────────────────────── */

whiteout_M2TextureTransform* whiteout_m2_M2TextureTransform_new(void);
void whiteout_m2_M2TextureTransform_delete(whiteout_M2TextureTransform* self);
/* ── M2ColorAnimation ─────────────────────────────────────────────── */

whiteout_M2ColorAnimation* whiteout_m2_M2ColorAnimation_new(void);
void whiteout_m2_M2ColorAnimation_delete(whiteout_M2ColorAnimation* self);
/* ── M2Light ─────────────────────────────────────────────── */

whiteout_M2Light* whiteout_m2_M2Light_new(void);
void whiteout_m2_M2Light_delete(whiteout_M2Light* self);
uint16_t whiteout_m2_M2Light_get_type(const whiteout_M2Light* self);
void whiteout_m2_M2Light_set_type(whiteout_M2Light* self, uint16_t value);
int16_t whiteout_m2_M2Light_get_boneId(const whiteout_M2Light* self);
void whiteout_m2_M2Light_set_boneId(whiteout_M2Light* self, int16_t value);
whiteout_Vector3f* whiteout_m2_M2Light_get_position(whiteout_M2Light* self);
void whiteout_m2_M2Light_set_position(whiteout_M2Light* self, const whiteout_Vector3f* value);
/* ── M2CameraSpline ─────────────────────────────────────────────── */

whiteout_M2CameraSpline* whiteout_m2_M2CameraSpline_new(void);
void whiteout_m2_M2CameraSpline_delete(whiteout_M2CameraSpline* self);
whiteout_Vector3f* whiteout_m2_M2CameraSpline_get_value(whiteout_M2CameraSpline* self);
void whiteout_m2_M2CameraSpline_set_value(whiteout_M2CameraSpline* self, const whiteout_Vector3f* value);
whiteout_Vector3f* whiteout_m2_M2CameraSpline_get_inTangent(whiteout_M2CameraSpline* self);
void whiteout_m2_M2CameraSpline_set_inTangent(whiteout_M2CameraSpline* self, const whiteout_Vector3f* value);
whiteout_Vector3f* whiteout_m2_M2CameraSpline_get_outTangent(whiteout_M2CameraSpline* self);
void whiteout_m2_M2CameraSpline_set_outTangent(whiteout_M2CameraSpline* self, const whiteout_Vector3f* value);
/* ── M2Camera ─────────────────────────────────────────────── */

whiteout_M2Camera* whiteout_m2_M2Camera_new(void);
void whiteout_m2_M2Camera_delete(whiteout_M2Camera* self);
uint32_t whiteout_m2_M2Camera_get_type(const whiteout_M2Camera* self);
void whiteout_m2_M2Camera_set_type(whiteout_M2Camera* self, uint32_t value);
float whiteout_m2_M2Camera_get_fieldOfView(const whiteout_M2Camera* self);
void whiteout_m2_M2Camera_set_fieldOfView(whiteout_M2Camera* self, float value);
float whiteout_m2_M2Camera_get_farClip(const whiteout_M2Camera* self);
void whiteout_m2_M2Camera_set_farClip(whiteout_M2Camera* self, float value);
float whiteout_m2_M2Camera_get_nearClip(const whiteout_M2Camera* self);
void whiteout_m2_M2Camera_set_nearClip(whiteout_M2Camera* self, float value);
whiteout_Vector3f* whiteout_m2_M2Camera_get_positionBase(whiteout_M2Camera* self);
void whiteout_m2_M2Camera_set_positionBase(whiteout_M2Camera* self, const whiteout_Vector3f* value);
whiteout_Vector3f* whiteout_m2_M2Camera_get_targetPositionBase(whiteout_M2Camera* self);
void whiteout_m2_M2Camera_set_targetPositionBase(whiteout_M2Camera* self, const whiteout_Vector3f* value);
/* ── M2Attachment ─────────────────────────────────────────────── */

whiteout_M2Attachment* whiteout_m2_M2Attachment_new(void);
void whiteout_m2_M2Attachment_delete(whiteout_M2Attachment* self);
uint32_t whiteout_m2_M2Attachment_get_id(const whiteout_M2Attachment* self);
void whiteout_m2_M2Attachment_set_id(whiteout_M2Attachment* self, uint32_t value);
uint16_t whiteout_m2_M2Attachment_get_boneId(const whiteout_M2Attachment* self);
void whiteout_m2_M2Attachment_set_boneId(whiteout_M2Attachment* self, uint16_t value);
uint16_t whiteout_m2_M2Attachment_get_unknown(const whiteout_M2Attachment* self);
void whiteout_m2_M2Attachment_set_unknown(whiteout_M2Attachment* self, uint16_t value);
whiteout_Vector3f* whiteout_m2_M2Attachment_get_position(whiteout_M2Attachment* self);
void whiteout_m2_M2Attachment_set_position(whiteout_M2Attachment* self, const whiteout_Vector3f* value);
/* ── M2RibbonEmitter ─────────────────────────────────────────────── */

whiteout_M2RibbonEmitter* whiteout_m2_M2RibbonEmitter_new(void);
void whiteout_m2_M2RibbonEmitter_delete(whiteout_M2RibbonEmitter* self);
uint32_t whiteout_m2_M2RibbonEmitter_get_ribbonId(const whiteout_M2RibbonEmitter* self);
void whiteout_m2_M2RibbonEmitter_set_ribbonId(whiteout_M2RibbonEmitter* self, uint32_t value);
uint32_t whiteout_m2_M2RibbonEmitter_get_boneId(const whiteout_M2RibbonEmitter* self);
void whiteout_m2_M2RibbonEmitter_set_boneId(whiteout_M2RibbonEmitter* self, uint32_t value);
whiteout_Vector3f* whiteout_m2_M2RibbonEmitter_get_position(whiteout_M2RibbonEmitter* self);
void whiteout_m2_M2RibbonEmitter_set_position(whiteout_M2RibbonEmitter* self, const whiteout_Vector3f* value);
float whiteout_m2_M2RibbonEmitter_get_edgesPerSecond(const whiteout_M2RibbonEmitter* self);
void whiteout_m2_M2RibbonEmitter_set_edgesPerSecond(whiteout_M2RibbonEmitter* self, float value);
float whiteout_m2_M2RibbonEmitter_get_edgeLifetime(const whiteout_M2RibbonEmitter* self);
void whiteout_m2_M2RibbonEmitter_set_edgeLifetime(whiteout_M2RibbonEmitter* self, float value);
float whiteout_m2_M2RibbonEmitter_get_gravity(const whiteout_M2RibbonEmitter* self);
void whiteout_m2_M2RibbonEmitter_set_gravity(whiteout_M2RibbonEmitter* self, float value);